# RTEAP_app

./: Dockerfile  alembic.ini  docker-compose.yml  drop_db_tables.py  pyproject.toml
alembic/: env.py
alembic/versions/: 032d2bae1e1a_changed_todos_to_product_in_relationship.py  25b4fc218b14_initial_migration.py  4ed4075f04aa_added_product_table.py  729254aa54ea_initial_migration.py  988938d080b0_add_adminusers_table.py  e1b395729051_modify_adminusers_table.py
app/: .dockerignore  database.py  exceptions.py  main.py  models.py  responses.py  schemas.py
app/routers/: auth.py  product_service.py  user_service.py  users_service.py
