[tool.poetry]
name = "rteap-app"
version = "0.1.0"
description = ""
authors = ["ymuza <yamil.muza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
